# plantbot

./: README.md  pyproject.toml  requirements.txt  setup.py
plantbot/: api.py  hooks.py  modules.txt
plantbot/plantbot/doctype/faqs/: faqs.js  faqs.json  faqs.py  test_faqs.py
plantbot/public/css/: chatbot.css
plantbot/public/images/: 6107328549158501926.png:Zone.Identifier
plantbot/public/js/: chatbot.js
